# jssg

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  AUTHORS.txt  COPYING  COPYING.CC-BY-NC-SA  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  configure.py  docker-compose.yml  jssg.py  manage.py  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: main.yaml
content/: 20230531_helloworld.rst  20230606_chaines_youtube.rst  20230613_pelican.rst  20230614_django_vuejs_multi_page_application.rst  20230618_mailo.rst  20240618_mailo.rst  cgi.html  cv.html  draft_20230613_complexification_de_la_simplicite.rst  index.html  projets.html
content/blog/: 20230531_helloworld.html  20230606_chaines_youtube.html  yyyymmdd_slug.html
content/cpu/: index.md
content/pages/: a_page.md  a_propos.md  a_propos.rst  about.rst  another_page.md  cgi.md  cgi.rst  crankshaft.md  crankshaft.rst  cv.md  cv.rst  index.md  pi_montecarlo.md  pimontecarlo.rst  projets.rst  raycaster.md  raycaster.rst  scadaplayer.md  scadaplayer.rst  sorts.rst  tris_animes.md
content/posts/: 19700101_hello.md  20230531_helloworld.md  20230531_helloworld.rst  20230606_chaines_youtube.md  20230606_chaines_youtube.rst  20230613_pelican.md  20230613_pelican.rst  (+12 more)
filters/: __init__.py
fragments/: Makefile  gen.py
jssg/: __init__.py  __main__.py  apps.py  asgi.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
jtremesay/: __init__.py  blog.py  page.py
src/: Turtle.ts
theme/: atom.xml  base.html  blog_index.html  menu.html
yassg/: __init__.py  __main__.py
(+90 files in other folders)
