[project]
name = "yassg"
version = "0.0.1"
description = "Yet another static site generator"
authors = [
    { name = "Jonathan Tremesaygues", email = "jonathan.tremesaygues@slaanesh.org" },
]
dependencies = ["Jinja2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
yassg = "yassg:main"

[tool.black]
profile = "black"
line-length = 79

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["yassg"]
